rfc-002 (incomplete)
This RFC covers the implementation of user authentication, authorization, and basic profile management for the Uznai quiz platform. It builds upon the infrastructure established in RFC-001 to provide a secure system for user registration, login, session management, and profile creation/viewing.